<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".AddEditActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="10dp"
            >



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Item name"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/itemNameEditText"
                android:hint="Enter Item Name"
                android:inputType="text"
                android:background="@drawable/edit_text_bg"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_qty"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/itemQtyEditText"
                android:hint="@string/enter_item_qty"
                android:inputType="number"
                android:background="@drawable/edit_text_bg"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_price"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/itemPriceEditText"
                android:hint="@string/enter_item_price"
                android:inputType="number"
                android:background="@drawable/edit_text_bg"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_gravity="center_horizontal"
                android:id="@+id/addEditBtn"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bg"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>


</ScrollView>